[TASK] Fix links

--- a/Ressources/Private/index.html
+++ b/Ressources/Private/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/scss/main.scss">
-    <title>Document</title>
+    <title>Willkommen bei der ZMG:  ZEITUNGSMARKTFORSCHUNG GESELLSCHAFT mbH</title>
 </head>
 
 <body>
@@ -111,7 +111,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -124,7 +124,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -137,11 +137,11 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
                 </div>
-                <a class="article-button" href="">Alle News</a>
+                <a class="article-button" href="secondsub.html">Alle News</a>
             </div>
             <!--Studien-->
             <div class="article-container">
@@ -156,7 +156,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -169,7 +169,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -182,11 +182,11 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
                 </div>
-                <a class="article-button" href="">Alle Studien</a>
+                <a class="article-button" href="secondsub.html">Alle Studien</a>
             </div>
 
             <!--Services-->
@@ -201,7 +201,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -214,7 +214,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -226,7 +226,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -253,7 +253,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -265,7 +265,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -296,7 +296,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
 
@@ -308,7 +308,7 @@
                                 enim,
                                 ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
                             </p>
-                            <a href="secondsub.html">Mehr</a>
+                            <a href="sub.html">Mehr</a>
                         </div>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
                             in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt
                             dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam
                             fugit veritatis hic cumque, quisquam quo ullam earum.</p>
-                        <a href="secondsub.html">Mehr</a>
+                        <a href="sub.html">Mehr</a>
                     </div>
                 </div>
 
