--- a/Ressources/Public/secondsub.html
+++ b/Ressources/Public/secondsub.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/secondsub.80a055de.css">
-    <title>Document</title>
+    <title>ZMG: Studien</title>
 <script src="/secondsub.80a055de.js"></script></head>
 
 <body>
@@ -82,8 +82,8 @@
     
         <div class="bread-crumb">
             <ul>
-                <li><a href="/sub.html">Sub-Page</a></li>
-                <li><a href="/secondsub.html">Second-Sub-Page</a></li>
+                <li><a href="/index.html">Startseite</a></li>
+                <li><a href="/secondsub.html">Studien</a></li>
             </ul>
         </div>
 
