--- a/Ressources/Public/sub.html
+++ b/Ressources/Public/sub.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/subpage.0463f5fb.css">
-    <title>Document</title>
+    <title>ZMG: Detailseite</title>
 <script src="/subpage.0463f5fb.js"></script></head>
 
 <body>
@@ -87,12 +87,13 @@
         <div class="bread-crumb">
             <ul>
                 <li><a href="/index.html">Startseite</a></li>
-                <li><a href="/sub.html">Sub-Page</a></li>
+                <li><a href="/secondsub.html">Studien</a></li>
+                <li><a href="/sub.html">Detailseite</a></li>
             </ul>
         </div>
 
         <main>
-            <h1>Sub-Page</h1>
+            <h1>Detailseite</h1>
 
             <div class="content-element-1">
                 <h2 class="image-title">Bildüberschrift</h2>
